<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:scaleType="centerCrop"
        android:src="@drawable/wall" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:overScrollMode="always"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/question1"
                    android:textAllCaps="true" />

                <RadioGroup
                    android:id="@+id/question1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer1_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer1_1"
                        android:textSize="16sp" />


                    <RadioButton
                        android:id="@+id/answer1_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer1_2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer1_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer1_3"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/question2"
                    android:textAllCaps="true" />

                <RadioGroup
                    android:id="@+id/question2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/answer2_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer2_1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer2_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer2_2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer2_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer2_3"
                        android:textSize="16sp" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/question3"
                    android:textAllCaps="true" />

                <RadioGroup
                    android:id="@+id/question3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer3_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer3_1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer3_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer3_2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer3_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer3_3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/question4"
                    android:textAllCaps="true" />

                <RadioGroup
                    android:id="@+id/question4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer4_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer4_1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer4_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer4_2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer4_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer4_3"
                        android:textSize="16sp" />

                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:text="@string/question5"
                    android:textAllCaps="true" />

                <RadioGroup
                    android:id="@+id/question5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/answer5_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer5_1"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer5_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer5_2"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/answer5_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:text="@string/answer5_3"
                        android:textSize="16sp" />
                </RadioGroup>

                <Button
                    android:id="@+id/button2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:background="@android:color/transparent"
                    android:onClick="seeTheResult"
                    android:text="@string/result_button"
                    android:textAllCaps="true"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</LinearLayout>