<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/wall"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/wall" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/guess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/marginQuizName"
            android:layout_marginVertical="@dimen/marginQuizName"
            android:gravity="center"
            android:text="@string/quiz_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sizeTextQuiz" />

        <EditText
            android:id="@+id/nameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginName"
            android:layout_marginHorizontal="@dimen/marginName"
            android:hint="@string/hintName"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:textAlignment="center"
            android:textColor="@android:color/white"
            android:textSize="@dimen/sizeName" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:background="@android:color/transparent"
        android:onClick="startTest"
        android:text="@string/start_button"
        android:textColor="@android:color/white"
        android:textSize="@dimen/sizeStart" />

</RelativeLayout>
